--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,10 @@
       rel="stylesheet"
       href="{{rootURL}}assets/tic-tac-toe.css"
     />
+    <script
+      src="https://kit.fontawesome.com/338f0daf06.js"
+      crossorigin="anonymous"
+    ></script>
 
     {{content-for "head-footer"}}
   </head>
