--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>TicTacToe</title>
+    <title>Tic-Na-Cho</title>
     <meta name="description" content="" />
     <meta
       name="viewport"
